# i3space

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build-and-install.sh
.github/workflows/: build.yml
docs/: PERF.md  PLANS.md  RETRO_MVP1.md
examples/: i3space.default
examples/picom/: i3space.conf
include/i3space/: app.hpp  compositor_detect.hpp  config.hpp  fade.hpp  first_run.hpp  i3_ipc.hpp  locale.hpp  version.hpp  workspace_view.hpp  x11_strip.hpp
man/: i3space.1
packaging/: .SRCINFO  PKGBUILD  PKGBUILD.example  README.md  prepare-sources.sh
src/: compositor_detect.cpp  config.cpp  fade.cpp  first_run.cpp  i3_ipc.cpp  input_keyboard.cpp  layout_horizontal.cpp  locale.cpp  main.cpp  mouse_input.cpp  print_active.cpp  single_ws_toast.cpp  toggle.cpp  tree_flatten.cpp  x11_strip.cpp
tests/: bench_parse.sh  bench_toggle.sh  check_version.sh  test_flatten.sh
